- fix alignment issue in profile update form - handle state updates properly to avoid window reload - add and link "START WRITING"

--- a/src/components/ProfilePage/EditProfileModal/EditProfileModal.scss
+++ b/src/components/ProfilePage/EditProfileModal/EditProfileModal.scss
@@ -9,6 +9,11 @@ main.profile-page {
           cursor: not-allowed;
         }
       }
+
+      .edit-bio-input{
+        padding-left: 10px;
+      }
+
       .validation-error {
         color: red;
         font-size: 0.9em;
